# Homework_7

./: .gitignore  CMakeLists.txt  main.cpp
.github/workflows/: cmake-ubuntu-windows.yml
SpaceBattle/: CMakeLists.txt
SpaceBattle/CmdExecutor/: CMakeLists.txt  CmdExecutor.cpp
SpaceBattle/CmdExecutor/Commands/: StartExecutorCommand.cpp
Test/: CMakeLists.txt  HardStopExecutorCommandTest.cpp  InitTestsStaticEnvironment.cpp  SoftStopExecutorCommandTest.cpp  StartExecutorCommandTest.cpp
